.ci-logs/last-build-error.log
Cannot remap modifiers because it does not exists in any of the targets [] or their parents.
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:60: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:272: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:337: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:359: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:369: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:503: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:505: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:505: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:272: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:503: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:505: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:505: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:60: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:337: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:359: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:369: error: cannot find symbol
---FULL TAIL---
  location: class AzeluxClickGui
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:505: error: cannot find symbol
                    && my >= renderDlBtnY && my < renderDlBtnY + dlBtnH) {
                             ^
  symbol:   variable renderDlBtnY
  location: class AzeluxClickGui
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:505: error: cannot find symbol
                    && my >= renderDlBtnY && my < renderDlBtnY + dlBtnH) {
                                                  ^
  symbol:   variable renderDlBtnY
  location: class AzeluxClickGui
Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
8 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///home/runner/work/Azelux-Client/Azelux-Client/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava' (registered by plugin class 'org.gradle.api.plugins.JavaBasePlugin').
> Compilation failed; see the compiler output below.
  Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:272: error: cannot find symbol
          renderDlBtnY = sy;
          ^
    symbol:   variable renderDlBtnY
    location: class AzeluxClickGui
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:503: error: cannot find symbol
              if (renderDlBtnY > 0
                  ^
    symbol:   variable renderDlBtnY
    location: class AzeluxClickGui
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:505: error: cannot find symbol
                      && my >= renderDlBtnY && my < renderDlBtnY + dlBtnH) {
                               ^
    symbol:   variable renderDlBtnY
    location: class AzeluxClickGui
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:505: error: cannot find symbol
                      && my >= renderDlBtnY && my < renderDlBtnY + dlBtnH) {
                                                    ^
    symbol:   variable renderDlBtnY
    location: class AzeluxClickGui
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:60: error: cannot find symbol
          BlockPos spawn   = mc.world.getSpawnPos();
                                     ^
    symbol:   method getSpawnPos()
    location: variable world of type ClientWorld
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:337: error: cannot find symbol
          net.minecraft.util.math.BlockPos spawn = client.world.getSpawnPos();
                                                               ^
    symbol:   method getSpawnPos()
    location: variable world of type ClientWorld
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:359: error: cannot find symbol
          players.sort(java.util.Comparator.comparing(e -> e.getProfile().getName()));
                                                                         ^
    symbol:   method getName()
    location: class GameProfile
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/AzeluxClickGui.java:369: error: cannot find symbol
              String pname  = e.getProfile().getName();
                                            ^
    symbol:   method getName()
    location: class GameProfile
  8 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.6.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1m 5s
1 actionable task: 1 executed
